[metadata]
name = SNANApyTOOLS
description = Tools for SNANA in python
url = https://github.com/bastiencarreres/SNANApyTools
email = bastien.carreres@duke.edu
author = Bastien Carreres
long_description = file : README.md
license = BSD3


[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    geopandas
    shapely
    astropy
    numba
